--- a/style.css
+++ b/style.css
@@ -179,11 +179,9 @@ body {
 
   body {
     overscroll-behavior: none;
-    touch-action: manipulation;
-
   }
 
   #game {
-    touch-action: manipulation;
+    touch-action: none;
   }
 }
